Changes of javaGeom library

javaGeom-0.5.2 (2008-??-??, rev. ??)

- change package hierarchy


javaGeom-0.5.2 (2008-01-17, rev. 93)

- Clipping of smooth curves has been improved
- Function "shape2D.getClippedShape()" have been renamed to
	"Shape2D.clip()", and clipping procedures have been improved
- Replace Math.sqrt() by Math.hypot(), to make computations more robust
- Vector2D is more robust for checking colinearity and orthogonality
- CircleArc2D.getReverseCurve() now returns a circle arc, not an ellipse arc
- Some classes have been renamed:
	Domain2D to GenericDomain2D, 
	AbstractDomain2D to Domain2D, 
	AbstractPolygon2D to PolygonalShape2D
- Deprecate class ContinuousOrientedCurveSet2D, and remove references to it
- add LinearTransforms, and GlideReflection2D


javaGeom-0.5.1 (2007-12-02, rev. 86)

- Use generics for curve set implementations, giving more control on type cast
	and adding more safety 
- Change hierarchy of affine transforms, allowing more control on type of 
	transforms after transform composition 
- Specialize the return type of overloaded methods when necessary 
- Add more controls on the curve collection in CurveSet2D 
- Deprecate class PolarPoint2D 
- Fix bug in polyline path


javaGeom-0.5.0 (2007-10-20, rev. 76)

- Better support for generics
- Change implementation of Bounding box, making it more robust and more generic
- Add fonction to compute polygon centroid
- Add class MultiPolygon2D, for multiply connected polygons
- improve stability and robustness for various functions (point-point 
	distances, affine transform)
- improve implementation of Parabola2D and ParabolArc2D
- introduce Hyperbolic conics (HyperbolaD, HyperbolaBranch2D, and 
	HyperbolaBranchArc2D)


javaGeom-0.4.0 (2007-05-13, rev. 55)

- update to Java 1.5.0 and to generics (finally !)
- add method Curve2D.getReverseCurve() which returns same curve with inverse
	parametrization
- add method ContinuousCurve2D.getAsPolyline(int), to use extract curve