@@ -38,7 +38,6 @@ public class AllTests {
 		TestSuite suite = new TestSuite("Test for math.geom2d.line");
 		//$JUnit-BEGIN$
 		suite.addTest(new TestSuite(ClosedPolyline2DTest.class));
-		suite.addTest(new TestSuite(HalfPlane2DTest.class));
 		suite.addTest(new TestSuite(LineSegment2DTest.class));
 		suite.addTest(new TestSuite(LineArc2DTest.class));
 		suite.addTest(new TestSuite(LineObject2DTest.class));
